agregado cards y footer

--- a/index.html
+++ b/index.html
@@ -10,28 +10,92 @@
     </head>
 
     <body>
-        <header>
+        <header id="home">
             <div class="header-container">
                 <div>
                     <nav>
                         <a href="index.html">ECTS</a>
                         <div>
                             <ul>
-                                <li><a href="">Inicio</a></li>
-                                <li><a href="">Temas</a></li>
+                                <li><a href="#home">Inicio</a></li>
+                                <li><a href="#main">Temas</a></li>
                             </ul>
                         </div>
                     </nav>
                 </div>
                 <div class="home-title">
                     Estudios de Ciencia, Tecnología y Sociedad
-                    <div class="home-button">
+                    <div>
                         <a href="#main" class="home-button">Mas</a>
                     </div>
                 </div>
             </div>
         </header>
-        <main id="main"></main>
+        <main id="main">
+            <div class="topics-container">
+                <div class="content">
+                    <div class="content-title">Temas</div>
+                    <div class="topic-cards">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/images/background_1.jpg" alt="" width="300" class="card-image">
+                                <div class="card-title">
+                                    Tema I
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-description">
+                                    description...
+                                </div>
+                                <a href="#" class="card-button">Leer más</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-image">
+                                    <img src="assets/images/background_2.jpg" alt="" width="300">
+                                </div>
+                                <div class="card-title">
+                                    Tema I
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                descripcion...
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-image">
+                                    <img src="assets/images/background_3.jpg" alt="" width="300">
+                                </div>
+                                <div class="card-title">
+                                    Tema I
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                descripcion...
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-image">
+                                    <img src="assets/images/background_1.jpg" alt="" width="300">
+                                </div>
+                                <div class="card-title">
+                                    Tema I
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                descripcion...
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+            footer
+        </footer>
     </body>
 
 </html>
