estilos del card y footer

--- a/index.html
+++ b/index.html
@@ -94,7 +94,22 @@
             </div>
         </main>
         <footer>
-            footer
+            <div class="footer-container">
+                <div class="footer-links">
+                    <h3>Enlaces</h3>
+                    <a href="#">Tema I</a>
+                    <a href="#">Tema II</a>
+                    <a href="#">Tema III</a>
+                    <a href="#">Tema IV</a>
+                </div>
+                <div class="footer-credits">
+                    <h3>Créditos</h3>
+                    <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
+                    <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
+                    <span>Msc. Leonardo Castillo Martínez - <i>Profesor de la asignatura</i></span>
+                </div>
+            </div>
+            <div class="footer-copy"><a href="https://www.uci.cu" target="_blank">Universidad de las Ciencias Informáticas</a>, 2023</div>
         </footer>
     </body>
 
