--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     </div>
                 </div>
             </div>
+            <a href="#home" class="floating-button">U</a>
         </main>
         <footer>
             <div class="footer-container">
