arreglado cards y home

--- a/index.html
+++ b/index.html
@@ -1,121 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/estilos.css">
-    <title>Estudios de Ciencia, Tecnología y Sociedad</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/css/estilos.css">
+        <title> Estudios de Ciencia, Tecnología y Sociedad </title>
+    </head>
 
-<body>
-    <header id="home">
-        <div class="header-container">
-            <div>
-                <nav>
-                    <a href="index.html">ECTS</a>
-                    <div>
-                        <ul>
-                            <li><a href="#home">Inicio</a></li>
-                            <li><a href="#main">Temas</a></li>
-                        </ul>
+    <body>
+        <header id="home">
+            <div class="header-container">
+                <div>
+                    <nav>
+                        <a href="index.html" class="nav-brand">ECTS</a>
+                        <div>
+                            <ul>
+                                <li><a href="#home">Inicio</a>
+                                </li>
+                                <li><a href="#main">Temas</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>s
+                </div>
+                <div class="home-title">
+                    <div class="home-header"> Estudios de Ciencia, Tecnología </br> y Sociedad </div>
+                    <div class="home-button-container">
+                        <a href="#main" class="home-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48" fill="white">
+                                <path
+                                    d="M24 24.9q-.4 0-.75-.125t-.65-.425l-9.9-9.9q-.6-.6-.6-1.425 0-.825.6-1.375.6-.6 1.4-.6.8 0 1.4.6l8.5 8.5 8.5-8.5q.6-.6 1.4-.6.8 0 1.4.6.6.6.6 1.4 0 .8-.6 1.4l-9.9 9.9q-.3.3-.65.425-.35.125-.75.125Zm0 13.3q-.4 0-.75-.125t-.65-.475l-9.9-9.9q-.6-.6-.6-1.4 0-.8.6-1.4.6-.55 1.4-.55.8 0 1.4.55l8.5 8.55 8.5-8.55q.6-.55 1.4-.55.8 0 1.4.55.6.6.6 1.4 0 .8-.6 1.4l-9.9 9.9q-.3.35-.65.475-.35.125-.75.125Z" />
+                            </svg>
+                        </a>
                     </div>
-                </nav>
+                </div>
             </div>
-            <div class="home-title">
-                Estudios de Ciencia, Tecnología y Sociedad
-                <a href="#main" class="home-button"><svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"
-                        fill="white">
-                        <path
-                            d="M24 24.9q-.4 0-.75-.125t-.65-.425l-9.9-9.9q-.6-.6-.6-1.425 0-.825.6-1.375.6-.6 1.4-.6.8 0 1.4.6l8.5 8.5 8.5-8.5q.6-.6 1.4-.6.8 0 1.4.6.6.6.6 1.4 0 .8-.6 1.4l-9.9 9.9q-.3.3-.65.425-.35.125-.75.125Zm0 13.3q-.4 0-.75-.125t-.65-.475l-9.9-9.9q-.6-.6-.6-1.4 0-.8.6-1.4.6-.55 1.4-.55.8 0 1.4.55l8.5 8.55 8.5-8.55q.6-.55 1.4-.55.8 0 1.4.55.6.6.6 1.4 0 .8-.6 1.4l-9.9 9.9q-.3.35-.65.475-.35.125-.75.125Z" />
-                    </svg></a>
-            </div>
-        </div>
-    </header>
-    <main id="main">
-        <div class="topics-container">
-            <div class="content">
-                <div class="content-title">Temas</div>
-                <div class="topic-cards">
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="assets/images/background_1.jpg" alt="" width="300" class="card-image">
-                            <div class="card-title">
-                                Tema I
+        </header>
+        <main id="main">
+            <div class="topics-container">
+                <div class="content">
+                    <div class="content-title"> Temas </div>
+                    <div class="topic-cards">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/images/background_3.jpg" alt="" width="300" class="card-image">
+                                <div class="card-title"> Tema I - Introducción </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-description">
+                                </div>
+                                <a href="#" class="card-button">Leer más</a>
                             </div>
                         </div>
-                        <div class="card-footer">
-                            <div class="card-description">
-                                description...
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/images/background_1.jpg" alt="" width="300" class="card-image">
+                                <div class="card-title"> Tema II - Enfoque social de la ciencia </div>
                             </div>
-                            <a href="#" class="card-button">Leer más</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="card-image">
-                                <img src="assets/images/background_2.jpg" alt="" width="300">
-                            </div>
-                            <div class="card-title">
-                                Tema I
+                            <div class="card-footer">
+                                <div class="card-description"> description... </div>
+                                <a href="#" class="card-button">Leer más</a>
                             </div>
                         </div>
-                        <div class="card-footer">
-                            descripcion...
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="card-image">
-                                <img src="assets/images/background_3.jpg" alt="" width="300">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/images/background_4.webp" alt="" width="300" class="card-image">
+                                <div class="card-title"> Tema III - Ética y sociedad </div>
                             </div>
-                            <div class="card-title">
-                                Tema I
+                            <div class="card-footer">
+                                <div class="card-description"> description... </div>
+                                <a href="#" class="card-button">Leer más</a>
                             </div>
                         </div>
-                        <div class="card-footer">
-                            descripcion...
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="card-image">
-                                <img src="assets/images/background_1.jpg" alt="" width="300">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/images/background_2.jpg" alt="" width="300" class="card-image">
+                                <div class="card-title"> Tema IV - Dimensión ambiental </div>
                             </div>
-                            <div class="card-title">
-                                Tema I
+                            <div class="card-footer">
+                                <div class="card-description"> description... </div>
+                                <a href="#" class="card-button">Leer más</a>
                             </div>
                         </div>
-                        <div class="card-footer">
-                            descripcion...
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/images/background_5.webp" alt="" width="300" class="card-image">
+                                <div class="card-title"> Tema V - Enfrentamiento climático </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-description"> description... </div>
+                                <a href="#" class="card-button">Leer más</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <a href="#home" class="floating-button">U</a>
-    </main>
-    <footer>
-        <div class="footer-container">
-            <div class="footer-links">
-                <h3>Enlaces</h3>
-                <a href="#">Tema I</a>
-                <a href="#">Tema II</a>
-                <a href="#">Tema III</a>
-                <a href="#">Tema IV</a>
+            <a href="#home" class="floating-button">U</a>
+        </main>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-links">
+                    <h3>Enlaces </h3>
+                    <a href="#">Tema I</a>
+                    <a href="#">Tema II</a>
+                    <a href="#">Tema III</a>
+                    <a href="#">Tema IV</a>
+                </div>
+                <div class="footer-credits">
+                    <h3>Créditos </h3>
+                    <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
+                    <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
+                    <span>Msc. Leonardo Castillo Martínez - <i>Profesor de la asignatura</i></span>
+                </div>
             </div>
-            <div class="footer-credits">
-                <h3>Créditos</h3>
-                <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
-                <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
-                <span>Msc. Leonardo Castillo Martínez - <i>Profesor de la asignatura</i></span>
+            <div class="footer-copy">
+                <a href="https://www.uci.cu" target="_blank">Universidad de las Ciencias Informáticas</a>, 2023
             </div>
-        </div>
-        <div class="footer-copy"><a href="https://www.uci.cu" target="_blank">Universidad de las Ciencias
-                Informáticas</a>, 2023</div>
-    </footer>
-
-</body>
+        </footer>
+    </body>
 
 </html>
