--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
                     <nav>
                         <a href="index.html" class="nav-brand">ECTS</a>
                         <div>
-                            <ul>
+                            <ul class="nav-links">
                                 <li><a href="#home">Inicio</a>
                                 </li>
                                 <li><a href="#main">Temas</a>
                                 </li>
                             </ul>
                         </div>
-                    </nav>s
+                    </nav>
                 </div>
                 <div class="home-title">
                     <div class="home-header"> Estudios de Ciencia, Tecnología </br> y Sociedad </div>
                     <div class="home-button-container">
                         <a href="#main" class="home-button">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48" fill="white">
-                                <path
-                                    d="M24 24.9q-.4 0-.75-.125t-.65-.425l-9.9-9.9q-.6-.6-.6-1.425 0-.825.6-1.375.6-.6 1.4-.6.8 0 1.4.6l8.5 8.5 8.5-8.5q.6-.6 1.4-.6.8 0 1.4.6.6.6.6 1.4 0 .8-.6 1.4l-9.9 9.9q-.3.3-.65.425-.35.125-.75.125Zm0 13.3q-.4 0-.75-.125t-.65-.475l-9.9-9.9q-.6-.6-.6-1.4 0-.8.6-1.4.6-.55 1.4-.55.8 0 1.4.55l8.5 8.55 8.5-8.55q.6-.55 1.4-.55.8 0 1.4.55.6.6.6 1.4 0 .8-.6 1.4l-9.9 9.9q-.3.35-.65.475-.35.125-.75.125Z" />
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                                <path fill="white"
+                                    d="M480 896 160 576l56-57 224 224V256h80v487l224-224 56 57-320 320Z" />
                             </svg>
                         </a>
                     </div>
@@ -39,9 +39,9 @@
             </div>
         </header>
         <main id="main">
-            <div class="topics-container">
+            <section class="topics-container">
                 <div class="content">
-                    <div class="content-title"> Temas </div>
+                    <div class="content-title"> Temas principales </div>
                     <div class="topic-cards">
                         <div class="card">
                             <div class="card-body">
@@ -96,8 +96,44 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <a href="#home" class="floating-button">U</a>
+                <div class="others-container">
+                    <div class="others-title"> Otros temas </div>
+                    <div class="topic-cards">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="assets/images/background_3.jpg" alt="" width="300" class="card-image">
+                                <div class="card-title"> Cambio climático y repercución social </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="card-description">
+                                </div>
+                                <a href="#" class="card-button">Leer más</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="support-container">
+                    <div class="support-title"> Material de apoyo </div>
+                    <div class="apk-container">
+                        <a href="#" class="apk" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                                <path
+                                    d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
+                            </svg> Estudios de Ciencia, Tecnología y Sociedad </a>
+                        <a href="https://apklis.cu/application/com.irdev.tareavida2021" class="apk" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                                <path
+                                    d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
+                            </svg> Tarea Vida </a>
+                    </div>
+                </div>
+            </section>
+            <a href="#home" class="floating-button">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24"
+                    viewBox="0 96 960 960" width="24">
+                    <path fill="white" d="M440 896V409L216 633l-56-57 320-320 320 320-56 57-224-224v487h-80Z" />
+                </svg>
+            </a>
         </main>
         <footer>
             <div class="footer-container">
