--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <head>
         <meta charset="UTF-8">
@@ -12,120 +12,116 @@
     <body>
         <header id="home">
             <div class="header-container">
-                <div>
-                    <nav>
-                        <a href="index.html" class="nav-brand">ECTS</a>
-                        <div>
-                            <ul class="nav-links">
-                                <li><a href="#home">Inicio</a>
-                                </li>
-                                <li><a href="#main">Temas</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-                <div class="home-title">
-                    <div class="home-header"> Estudios de Ciencia, Tecnología </br> y Sociedad </div>
-                    <div class="home-button-container">
-                        <a href="#main" class="home-button">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
-                                <path fill="white"
-                                    d="M480 896 160 576l56-57 224 224V256h80v487l224-224 56 57-320 320Z" />
-                            </svg>
-                        </a>
+                <nav>
+                    <a href="index.html" class="nav-brand">ECTS</a>
+                    <div>
+                        <ul class="nav-links">
+                            <li><a href="#home">Inicio</a>
+                            </li>
+                            <li><a href="#main">Temas</a>
+                            </li>
+                        </ul>
                     </div>
+                </nav>
+                <div class="home-title">
+                    <div class="home-header"> Estudios de Ciencia, Tecnología y Sociedad </div>
+                </div>
+                <div class="home-button-container">
+                    <a href="#main" class="home-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                            <path fill="white"
+                                d="M480 896 160 576l56-57 224 224V256h80v487l224-224 56 57-320 320Z" />
+                        </svg>
+                    </a>
                 </div>
             </div>
         </header>
         <main id="main">
-            <section class="topics-container">
-                <div class="content">
-                    <div class="content-title"> Temas principales </div>
-                    <div class="topic-cards">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="assets/images/background_3.jpg" alt="" width="300" class="card-image">
-                                <div class="card-title"> Tema I - Introducción </div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="card-description">
-                                </div>
-                                <a href="#" class="card-button">Leer más</a>
-                            </div>
+            <section class="content" id="content">
+                <div class="content-title"> Temas principales </div>
+                <div class="topic-cards">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="assets/images/background_3.jpg" alt="" width="300" class="card-image">
+                            <div class="card-title"> Tema I - Introducción </div>
                         </div>
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="assets/images/background_1.jpg" alt="" width="300" class="card-image">
-                                <div class="card-title"> Tema II - Enfoque social de la ciencia </div>
+                        <div class="card-footer">
+                            <div class="card-description">
                             </div>
-                            <div class="card-footer">
-                                <div class="card-description"> description... </div>
-                                <a href="#" class="card-button">Leer más</a>
-                            </div>
+                            <a href="#" class="card-button">Leer más</a>
                         </div>
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="assets/images/background_4.webp" alt="" width="300" class="card-image">
-                                <div class="card-title"> Tema III - Ética y sociedad </div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="card-description"> description... </div>
-                                <a href="#" class="card-button">Leer más</a>
-                            </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="assets/images/background_1.jpg" alt="" width="300" class="card-image">
+                            <div class="card-title"> Tema II - Enfoque social de la ciencia </div>
                         </div>
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="assets/images/background_2.jpg" alt="" width="300" class="card-image">
-                                <div class="card-title"> Tema IV - Dimensión ambiental </div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="card-description"> description... </div>
-                                <a href="#" class="card-button">Leer más</a>
-                            </div>
+                        <div class="card-footer">
+                            <div class="card-description"> description... </div>
+                            <a href="#" class="card-button">Leer más</a>
                         </div>
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="assets/images/background_5.webp" alt="" width="300" class="card-image">
-                                <div class="card-title"> Tema V - Enfrentamiento climático </div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="card-description"> description... </div>
-                                <a href="#" class="card-button">Leer más</a>
-                            </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="assets/images/background_4.webp" alt="" width="300" class="card-image">
+                            <div class="card-title"> Tema III - Ética y sociedad </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="card-description"> description... </div>
+                            <a href="#" class="card-button">Leer más</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="assets/images/background_2.jpg" alt="" width="300" class="card-image">
+                            <div class="card-title"> Tema IV - Dimensión ambiental </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="card-description"> description... </div>
+                            <a href="#" class="card-button">Leer más</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="assets/images/background_5.webp" alt="" width="300" class="card-image">
+                            <div class="card-title"> Tema V - Enfrentamiento climático </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="card-description"> description... </div>
+                            <a href="#" class="card-button">Leer más</a>
                         </div>
                     </div>
                 </div>
-                <div class="others-container">
-                    <div class="others-title"> Otros temas </div>
-                    <div class="topic-cards">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="assets/images/background_3.jpg" alt="" width="300" class="card-image">
-                                <div class="card-title"> Cambio climático y repercución social </div>
+            </section>
+            <section class="others-container" id="others">
+                <div class="others-title"> Otros temas </div>
+                <div class="topic-cards">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="assets/images/background_5.webp" alt="" width="300" class="card-image">
+                            <div class="card-title"> Cambio climático y repercución social </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="card-description">
                             </div>
-                            <div class="card-footer">
-                                <div class="card-description">
-                                </div>
-                                <a href="#" class="card-button">Leer más</a>
-                            </div>
+                            <a href="pages/others_1.html" class="card-button">Leer más</a>
                         </div>
                     </div>
                 </div>
-                <div class="support-container">
-                    <div class="support-title"> Material de apoyo </div>
-                    <div class="apk-container">
-                        <a href="#" class="apk" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
-                                <path
-                                    d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
-                            </svg> Estudios de Ciencia, Tecnología y Sociedad </a>
-                        <a href="https://apklis.cu/application/com.irdev.tareavida2021" class="apk" target="_blank">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
-                                <path
-                                    d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
-                            </svg> Tarea Vida </a>
-                    </div>
+            </section>
+            <section class="support-container" id="support">
+                <div class="support-title"> Material de apoyo </div>
+                <div class="apk-container">
+                    <a href="#" class="apk" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                            <path
+                                d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
+                        </svg> Estudios de Ciencia, Tecnología y Sociedad </a>
+                    <a href="https://apklis.cu/application/com.irdev.tareavida2021" class="apk" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                            <path
+                                d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
+                        </svg> Tarea Vida </a>
                 </div>
             </section>
             <a href="#home" class="floating-button">
@@ -139,13 +135,12 @@
             <div class="footer-container">
                 <div class="footer-links">
                     <h3>Enlaces </h3>
-                    <a href="#">Tema I</a>
-                    <a href="#">Tema II</a>
-                    <a href="#">Tema III</a>
-                    <a href="#">Tema IV</a>
+                    <a href="#content">Temas principales</a>
+                    <a href="#others">Otros temas</a>
+                    <a href="#support">Material de apoyo</a>
                 </div>
                 <div class="footer-credits">
-                    <h3>Créditos </h3>
+                    <h3>Créditos</h3>
                     <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
                     <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
                     <span>Msc. Leonardo Castillo Martínez - <i>Profesor de la asignatura</i></span>
