--- a/pages/others_1.html
+++ b/pages/others_1.html
@@ -16,8 +16,7 @@
                 <nav>
                     <a href="../index.html" class="nav-brand">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
-                            <path fill="white"
-                                d="M480 896 160 576l56-57 224 224V256h80v487l224-224 56 57-320 320Z" />
+                            <path fill="white" d="M480 896 160 576l320-320 57 56-224 224h487v80H313l224 224-57 56Z" />
                         </svg> Atrás</a>
                 </nav>
                 <div class="home-title">
