estructuracion del contenido

--- a/pages/others_1.html
+++ b/pages/others_1.html
@@ -33,7 +33,84 @@
             </div>
         </header>
         <main id="main">
-            <section id="content">
+            <section id="content" class="content">
+                <div class="content-title">Cambio climático y repercusión social</div>
+                <div class="container">
+                    <div class="subtopic-container" id="subtopic_1">
+                        <div class="subtopic-title">1. El clima como recurso natural. El cambio climático, sus causas y
+                            efectos</div>
+                        <div class="subtopic">
+                            <p>
+                                <strong>¿Qué es el clima?</strong><br> El clima...
+                            </p>
+                            <p>
+                                <strong>El hombre cambia el clima. Evidencias</strong><br> El hombre...
+                            </p>
+                            <p>
+                                <strong>El calentamiento global</strong><br> El calentamiento...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="subtopic-container" id="subtopic_2">
+                        <div class="subtopic-title">2. Huella ecológica y responsabilidad histórica. Respuesta de la
+                            Comunidad Internacional. Mitigación y adaptación.</div>
+                        <div class="subtopic">
+                            <p>
+                                <strong>Convención de la ONU sobre cambio climático</strong><br> Convencion...
+                            </p>
+                            <p>
+                                <strong>Protocolo de Kyoto</strong><br> El protocolo...
+                            </p>
+                            <p>
+                                <strong>Mitigación y adaptación</strong> Mitigacion...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="subtopic-container" id="subtopic_3">
+                        <div class="subtopic-title">3. Cuba y el clima del futuro.</div>
+                        <div class="subtopic">
+                            <p> En Cuba... </p>
+                            <p>
+                                <strong>Evidencias del cambio climático en Cuba</strong><br> En cuba...
+                            </p>
+                            <p>
+                                <strong>Mitigación y adaptaciones</strong><br> Mitigacion...
+                            </p>
+                            <p>
+                                <strong>Cuba y la convención de la ONU</strong><br> Cuba...
+                            </p>
+                            <p>
+                                <strong>Reflexiones de Fidel</strong><br> Reflexion...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="subtopic-container" id="subtopic_4">
+                        <div class="subtopic-title">4. Relación Medio ambiente-Informática: La Basura Electrónica.</div>
+                        <div class="subtopic">
+                            <p>
+                                <strong>Basura electrónica. Definición y componentes</strong><br> Basura...
+                            </p>
+                            <p>
+                                <strong>Prooblemas ambientales que ocasiona</strong><br> Problemas...
+                            </p>
+                            <p>
+                                <strong>Responsables de distribución de basura electrónica</strong><br> Responsables...
+                            </p>
+                            <p>
+                                <strong>¿Quienes son los más afectados?</strong><br> Los mas afectados...
+                            </p>
+                            <p>
+                                <strong>¿Qué hacen las grandes transnacionales al respecto?</strong><br> Las grandes...
+                            </p>
+                        </div>
+                    </div>
+                    <div class="subtopic-container" id="subtopic_5">
+                        <div class="subtopic-title">Bibliografía consultada</div>
+                        <div class="subtopic">
+                            <p>contenido</p>
+                        </div>
+                    </div>
+                </div>
             </section>
             <a href="#home" class="floating-button">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24"
@@ -46,9 +123,9 @@
             <div class="footer-container">
                 <div class="footer-links">
                     <h3>Enlaces </h3>
-                    <a href="#content">Temas principales</a>
-                    <a href="#others">Otros temas</a>
-                    <a href="#support">Material de apoyo</a>
+                    <a href="../index.html#content">Temas principales</a>
+                    <a href="../index.html#others">Otros temas</a>
+                    <a href="../index.html#support">Material de apoyo</a>
                 </div>
                 <div class="footer-credits">
                     <h3>Créditos</h3>
