padding main vista mobil

--- a/pages/others_1.html
+++ b/pages/others_1.html
@@ -13,7 +13,7 @@
     <body>
         <header id="home">
             <div class="header-container">
-                <nav>
+                <nav class="nav-back">
                     <a href="../index.html" class="nav-brand">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
                             <path fill="white" d="M480 896 160 576l320-320 57 56-224 224h487v80H313l224 224-57 56Z" />
@@ -104,11 +104,13 @@
                             </p>
                         </div>
                     </div>
-                    <div class="subtopic-container" id="subtopic_5">
-                        <div class="subtopic-title">Bibliografía consultada</div>
-                        <div class="subtopic">
-                            <p>contenido</p>
-                        </div>
+                </div>
+            </section>
+            <section class="content biblio">
+                <div class="content-title">Bibliografía consultada</div>
+                <div class="subtopic-container" id="subtopic_5">
+                    <div class="subtopic">
+                        <p>contenido</p>
                     </div>
                 </div>
             </section>
