--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header id="home">
             <div class="header-container">
                 <nav>
-                    <a href="index.html" class="nav-brand">ECTS</a>
+                    <a href="index.html" class="nav-brand ects-link">ECTS</a>
                     <div>
                         <ul class="nav-links">
                             <li><a href="#home">Inicio</a>
