estilos, indice navegacion, contenido

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="card">
                         <div class="card-body">
                             <img src="assets/images/background_5.webp" alt="" width="300" class="card-image">
-                            <div class="card-title"> Cambio climático y repercución social </div>
+                            <div class="card-title"> Cambio climático y repercusión social </div>
                         </div>
                         <div class="card-footer">
                             <div class="card-description">
